[package]
name = "vmstat_usage_api"
version = "0.2.0"
edition = "2021"
author = "Richy Yang <w4567892015@gmail.com>"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
dotenv = "0.15.0"
